# SENTINEL-API

./: .gitignore  .pyre_configuration  README.md  SENTINEL-API_report.docx  SENTINEL-API_report.md  SENTINEL-API_report.txt  eslint.config.mjs  generate_specs.py  package-lock.json  package.json  patch.py  patch_logic.py  patch_main.py  pyproject.toml  pyrightconfig.json  requirements.txt  test_async.py  test_async_v.py  test_client.py  test_inspect.py  test_inspect_verbose.py  test_norm.py  test_pipeline_e2e.py  tsconfig.json  vercel.json
SENTINEL-API/: README.md  package-lock.json  package.json  requirements.txt  start.ps1  vercel.json
SENTINEL-API/backend/: autoapi.db  pyproject.toml
SENTINEL-API/backend/app/: main.py
SENTINEL-API/backend/app/api/: auth.py
SENTINEL-API/backend/app/core/: llm.py
SENTINEL-API/backend/app/graph/: builder.py  state.py
SENTINEL-API/backend/app/graph/nodes/: analyze_rca.py  approval_gate.py  generate_report.py  lint_spec.py  map_compliance.py  parse_spec.py  predict_breaking_changes.py  remediate_drift.py  validate_iac.py  validate_responses.py
SENTINEL-API/backend/app/schemas/: models.py
SENTINEL-API/backend/app/services/: api_executor.py  blast_radius.py  breaking_change_predictor.py  cicd.py  mock_server.py  openapi_loader.py  policy_engine.py  pr_remediation_bot.py  report_generator.py  response_validator.py  safe_to_ship_gate.py  security_test_generator.py  spec_linter.py  spec_validator.py  test_generator.py
SENTINEL-API/backend/cli/: mock_server.py
api/: requirements.txt
cli/: main.py  pyproject.toml
(+143 files in other folders)
