[project]
name = "autoapi-cli"
version = "0.1.0"
description = "AI-Powered OpenAPI-First API Testing Platform CLI"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.7.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
